test/e2e/conformance/tests/httproute-rewrite-path.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: httproute-rewrite-path
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: "/svc/(.*)"
        backend:
          service:
            name: infra-backend-v1
            port:
              number: 8080
